@@ -25,7 +25,9 @@ import java.io.IOException;
 import java.io.InputStream;
 import java.io.Writer;
 import java.net.URL;
-
+import java.util.regex.Matcher;
+import java.util.regex.Pattern;
+ 
 import org.apache.commons.io.IOUtils;
 import org.apache.lucene.index.IndexReader;
 import org.apache.lucene.search.IndexSearcher;
@@ -753,7 +755,7 @@ public class TestReplicationHandler extends SolrTestCaseJ4 {
       volatile String fail = null;
       @Override
       public void run() {
-        String masterUrl = "http://localhost:" + masterJetty.getLocalPort() + "/solr/replication?command=" + ReplicationHandler.CMD_BACKUP;
+        String masterUrl = "http://localhost:" + masterJetty.getLocalPort() + "/solr/replication?command=" + ReplicationHandler.CMD_BACKUP + "&" + ReplicationHandler.NUMBER_BACKUPS_TO_KEEP + "=1";
         URL url;
         InputStream stream = null;
         try {
@@ -768,14 +770,18 @@ public class TestReplicationHandler extends SolrTestCaseJ4 {
 
       };
     };
-    BackupThread backupThread = new BackupThread();
-    backupThread.start();
     
-    File dataDir = new File(master.getDataDir());
     class CheckStatus extends Thread {
       volatile String fail = null;
       volatile String response = null;
       volatile boolean success = false;
+      volatile String backupTimestamp = null;
+      final String lastBackupTimestamp;
+      final Pattern p = Pattern.compile("<str name=\"snapshotCompletedAt\">(.*?)</str>");
+      
+      CheckStatus(String lastBackupTimestamp) {
+        this.lastBackupTimestamp = lastBackupTimestamp;
+      }
       @Override
       public void run() {
         String masterUrl = "http://localhost:" + masterJetty.getLocalPort() + "/solr/replication?command=" + ReplicationHandler.CMD_DETAILS;
@@ -786,7 +792,14 @@ public class TestReplicationHandler extends SolrTestCaseJ4 {
           stream = url.openStream();
           response = IOUtils.toString(stream, "UTF-8");
           if(response.contains("<str name=\"status\">success</str>")) {
-            success = true;
+            Matcher m = p.matcher(response);
+            if(!m.find()) {
+              fail("could not find the completed timestamp in response.");
+            }
+            backupTimestamp = m.group(1);   
+            if(!backupTimestamp.equals(lastBackupTimestamp)) {
+              success = true;
+            }
           }
           stream.close();
         } catch (Exception e) {
@@ -797,48 +810,67 @@ public class TestReplicationHandler extends SolrTestCaseJ4 {
 
       };
     };
-    int waitCnt = 0;
-    CheckStatus checkStatus = new CheckStatus();
-    while(true) {
-      checkStatus.run();
-      if(checkStatus.fail != null) {
-        fail(checkStatus.fail);
+    
+    File[] snapDir = new File[2];
+    String firstBackupTimestamp = null;
+    for(int i=0 ; i<2 ; i++) {
+      BackupThread backupThread = new BackupThread();
+      backupThread.start();
+      
+      File dataDir = new File(master.getDataDir());
+      
+      int waitCnt = 0;
+      CheckStatus checkStatus = new CheckStatus(firstBackupTimestamp);
+      while(true) {
+        checkStatus.run();
+        if(checkStatus.fail != null) {
+          fail(checkStatus.fail);
+        }
+        if(checkStatus.success) {
+          if(i==0) {
+            firstBackupTimestamp = checkStatus.backupTimestamp;
+            Thread.sleep(1000); //ensure the next backup will have a different timestamp.
+          }
+          break;
+        }
+        Thread.sleep(200);
+        if(waitCnt == 10) {
+          fail("Backup success not detected:" + checkStatus.response);
+        }
+        waitCnt++;
       }
-      if(checkStatus.success) {
-        break;
+      
+      if(backupThread.fail != null) {
+        fail(backupThread.fail);
       }
-      Thread.sleep(200);
-      if(waitCnt == 10) {
-        fail("Backup success not detected:" + checkStatus.response);
-      }
-      waitCnt++;
+  
+      File[] files = dataDir.listFiles(new FilenameFilter() {
+        
+          public boolean accept(File dir, String name) {
+            if(name.startsWith("snapshot")) {
+              return true;
+            }
+            return false;
+          }
+        });
+      assertEquals(1, files.length);
+      snapDir[i] = files[0];
+      Directory dir = new SimpleFSDirectory(snapDir[i].getAbsoluteFile());
+      IndexReader reader = IndexReader.open(dir);
+      IndexSearcher searcher = new IndexSearcher(reader);
+      TopDocs hits = searcher.search(new MatchAllDocsQuery(), 1);
+      assertEquals(nDocs, hits.totalHits);
+      reader.close();
+      searcher.close();
+      dir.close();
+    }
+    if(snapDir[0].exists()) {
+      fail("The first backup should have been cleaned up because " + ReplicationHandler.NUMBER_BACKUPS_TO_KEEP + " was set to 1");
     }
     
-    if(backupThread.fail != null) {
-      fail(backupThread.fail);
+    for(int i=0 ; i< snapDir.length ; i++) {
+      AbstractSolrTestCase.recurseDelete(snapDir[i]); // clean up the snap dir
     }
-
-    File[] files = dataDir.listFiles(new FilenameFilter() {
-      
-      public boolean accept(File dir, String name) {
-        if(name.startsWith("snapshot")) {
-          return true;
-        }
-        return false;
-      }
-    });
-    assertEquals(1, files.length);
-    File snapDir = files[0];
-    Directory dir = new SimpleFSDirectory(snapDir.getAbsoluteFile());
-    IndexReader reader = IndexReader.open(dir);
-    IndexSearcher searcher = new IndexSearcher(reader);
-    TopDocs hits = searcher.search(new MatchAllDocsQuery(), 1);
-
-    assertEquals(nDocs, hits.totalHits);
-    searcher.close();
-    reader.close();
-    dir.close();
-    AbstractSolrTestCase.recurseDelete(snapDir); // clean up the snap dir
   }
 
   /* character copy of file using UTF-8 */
